--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <!-- navigation -->
     <nav>
       <ul>
-        <li><a href="#">HTML & CSS</a></li>
-        <li><a href="#">UX & UI</a></li>
-        <li><a href="#">JAVASCRIPT</a></li>
-        <li><a href="#">EXPRESS</a></li>
-        <li><a href="#">MONGODB</a></li>
-        <li><a href="#">REACT</a></li>
-        <li><a href="#">CYBERSECURITY</a></li>
-        <li><a href="#">PYTHON</a></li>
+        <li><a href="https://www.w3.org/standards/webdesign/htmlcss">HTML & CSS</a></li>
+        <li><a href="https://maze.co/collections/ux-ui-design/tools/">UX & UI</a></li>
+        <li><a href="https://www.javascript.com/">JAVASCRIPT</a></li>
+        <li><a href="https://expressjs.com/">EXPRESS</a></li>
+        <li><a href="https://www.mongodb.com/">MONGODB</a></li>
+        <li><a href="https://reactjs.org/">REACT</a></li>
+        <li><a href="https://www.se.com/ww/en/"">CYBERSECURITY</a></li>
+        <li><a href="https://www.python.org/">PYTHON</a></li>
       </ul>
     </nav>
     <!-- front page article -->
