--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li><a href="https://expressjs.com/">EXPRESS</a></li>
         <li><a href="https://www.mongodb.com/">MONGODB</a></li>
         <li><a href="https://reactjs.org/">REACT</a></li>
-        <li><a href="https://www.se.com/ww/en/"">CYBERSECURITY</a></li>
+        <li><a href="https://www.se.com/ww/en/">CYBERSECURITY</a></li>
         <li><a href="https://www.python.org/">PYTHON</a></li>
       </ul>
     </nav>
@@ -39,13 +39,13 @@
     </main>
     <!-- more articles -->
     <div class="more-articles">
-      <section>
+      <section id="Top-section">
         <h4>Tabs vs. Spaces</h4>
         <img src="assets/article-one.png" alt="placeholder">
         <p>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</p>
       </section>
       <section id="Bottom-section">
-        <h4>How Much Caffeine Is Too Much?</h4>
+        <h4 id="Bottom-title">How Much Caffeine Is Too Much?</h4>
         <img src="assets/article-two.png" alt="Espresso">
         <p>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</p>
       </section>
